# photito

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
src/gotito.pipeline/processes/: astrometry.py
src/photito/: __init__.py  config.py  image_sets.py
src/photito/processes/: astrometry.py  calibration.py  reduce.py  registration.py
tests/: test_bias.py
